Spixi/Resources/Raw/html/css/spixiui-light.css
/* ... */
.spixi-list-tx-icon {
    width: 20px;
}

.spixi-list-item-amount-fiat {
    display: inline-block;
    font-style: normal;
    font-weight: 600;
    font-size: 10px;
    line-height: 12px;
    text-align: right;
    color: #687786;
    margin-right: 25px;
}

.spixi-list-item-first-row {
    margin-left: 15px;
    margin-right: 15px;
    padding-top: 12px;
}
.spixi-list-item-second-row {
    margin-top: -10px;
    margin-left: 15px;
    margin-right: 15px;
    border-bottom: 0.5px solid rgba(25, 41, 60, 0.10);
    padding-bottom: 12px;
}

.spixi-list-item-left {
    display: inline-block;
    width: 50pt;
    max-width: 64px;
    vertical-align: middle;
}

.payment .spixi-list-item-left {
    font-size: 15pt;
    text-align: right;
}

.spixi-list-item-center {
    display: inline-block;
    width: 100%;
    box-sizing: border-box;
    vertical-align: middle;
}

.spixi-list-item-title {
    color: #1C1C1D;
    font-size: 12pt;
    font-weight: regular;
    overflow: hidden;
    white-space: nowrap;
	text-overflow: ellipsis;
}
.spixi-list-item-title-center {
    color: #1C1C1D;
    font-size: 10pt;
    width: 100%;
    overflow: hidden;
    white-space: nowrap;
	text-overflow: ellipsis;
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}
.spixi-list-item-title-center.selected {
    font-weight: bold;
}

.spixi-list-item-subtitle {
    color: #4f4f4f;
    font-size: 11pt;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.spixi-list-item-subtitle.typing {
    font-style: italic;
}

.spixi-list-item-right {
    text-align: right;
}

.spixi-list-item-right .spixi-timestamp
{
    display:block;
    font-size: 9pt;
    vertical-align: middle;
    position: absolute;
    width: 60pt;
    max-width: 60pt;
    top: 50%;
    transform: translateY(-50%);
    right: 15px;
    color: #7c7c7c;
}

.spixi-list-item-action-icon {
    font-size: 14pt;
    z-index: 2;
    color: #c2185b;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 15px;
}

.spixi-list-item-noborder{
    border: 0;
}

.spixi-list-placeholer-text {
    margin-left: 30px;
    margin-top: 15px;
    font-size: 10pt;
    font-style: italic;   
}

.spixi-list-placeholder-title {
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 40px;
    text-align: center;
    color: #171E26;
}
.spixi-list-placeholder-title.topoffset {
    margin-top: 24px;
}

.spixi-list-placeholder-subtitle {
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 16px;
    text-align: center;
    color: #848484;
    margin-top: 8px;
}

.spixi-list-placeholder-button {
    margin-top: 0px;
    margin-left: 4px;
    margin-right: 4px;
    text-align: center;
    color: #FFFFFF;
    justify-content: center;
    align-items: center;
    padding: 10px 0px;
    gap: 8px;
    width: 99px;
    height: 40px;
    background: #041120;
    border-radius: 8px;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 16px;
}

.spixi-list-placeholder-chat-image {
    background-image: url("../img/chats_es.svg");
    background-repeat: no-repeat;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 10px;
    box-sizing: border-box;
    width: 192px;
    height: 154px;
    border: 0;
}

.spixi-list-placeholder-contacts-image {
    background-image: url("../img/contacts_es.svg");
    background-repeat: no-repeat;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 10px;
    box-sizing: border-box;
    width: 192px;
    height: 154px;
    border: 0;
}

.spixi-list-placeholder-transactions-image {
    background-image: url("../img/transactions_es.svg");
    background-repeat: no-repeat;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 10px;
    box-sizing: border-box;
    width: 192px;
    height: 154px;
    border: 0;
}

.spixi-list-placeholder-margintop {
    margin-top: 24px;
}

.maintabholder {
    box-sizing: border-box;
    overflow-y: scroll;
    height: calc(100vh - 120px);
    position: relative;
}

/* Chat */
#messages {
    box-sizing: border-box;
    overflow-y: scroll;
    height: calc(100vh - 120px);
    position: relative;
    background-image: url('../img/pattern.svg');
    background-repeat: repeat;
    background-size: 324px 509px;
    padding-top: 10px;
}

.scrollable-div {
    overflow-y: scroll;
}

.scrollable-div::-webkit-scrollbar {
    width: 10px;
}

.scrollable-div::-webkit-scrollbar-thumb {
    background-color: #B3C6CE;
    border-radius: 10px;
    border: 2px solid #E2EAEE;
}

.scrollable-div::-webkit-scrollbar-track {
    background: #E2EAEE;
    width: 10px;
}

.scrollable-div:empty::-webkit-scrollbar-track {
    background: transparent;
}

.spixi-bubble
{
    font-size: 10pt;
    position:relative;
    background:#ffffff;
    border-radius:16px;
    color: black;
    
    margin-left: 56px;
    margin-right: 85px;
    margin-bottom: 10px;
    min-width: 80px;
    
    animation-name: chat_animation;
    animation-duration: 0.3s;

    word-wrap: break-word;
}

.spixi-bubble > div
{
    padding: 10px 15px;
    padding-bottom: 5px;
}

.spixi-bubble.myself {
    margin-left: 125px;
    margin-right: 11px;
    background: #AAD7F0;
}

.spixi-bubble .text img
{
    max-width: 100%;
    object-fit: contain;
}

.spixi-bubble.file {
    font-size: 14pt;
}

.spixi-bubble.spixi-payment-request {
    background: white;
}

.spixi-bubble.sent,
.spixi-bubble.confirmed,
.spixi-bubble.read
{
    border: none;
}

.spixi-bubble .nick {
    font-weight: bold;
}

.spixi-bubble .time
{
    padding-right: 15px;
    font-size: 8px;
    height: 20px;
    max-height: 20px;
    color: #919191;
    z-index: 4;
}
.spixi-bubble.myself .time {
    text-align: right;
    right: 13pt;
    padding-right: 15px;
    color: #3D556C;
}

.spixi-bubble.file.myself {
    font-size: 14pt;
    text-align: right;
}
/* ... */

